--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "org.apache.commons:commons-lang3:3.0"
         testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 }
