--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'wf'
-        gdxVersion = '1.5.3'
+        gdxVersion = '1.6.1-SNAPSHOT'
         roboVMVersion = '1.0.0-beta-03'
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
