--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'wf'
-        gdxVersion = '1.6.1-SNAPSHOT'
+        gdxVersion = '1.6.4'
         roboVMVersion = '1.0.0-beta-03'
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
@@ -45,7 +45,8 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "org.apache.commons:commons-lang3:3.0"
-        testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile "org.mockito:mockito-core:1.+"
+        testCompile "junit:junit:4.11+"
     }
 }
 
