--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ project(":core") {
 
 
     dependencies {
+        compile "ch.qos.logback:logback-classic:1.1.3"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "org.apache.commons:commons-lang3:3.0"
         testCompile "org.mockito:mockito-core:1.+"
