--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ project(":core") {
         compile "ch.qos.logback:logback-classic:1.1.3"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "org.apache.commons:commons-lang3:3.0"
-        compile "com.google.code.gson:gson:2.4"
+        compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
         testCompile "org.mockito:mockito-core:1.+"
         testCompile "junit:junit:4.11+"
     }
