--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "org.apache.commons:commons-lang3:3.0"
         compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
+        compile "com.google.guava:guava:19.0"
         testCompile "org.mockito:mockito-core:1.+"
         testCompile "junit:junit:4.11+"
     }
