--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ project(":core") {
     dependencies {
         compile "ch.qos.logback:logback-classic:1.1.3"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "net.onedaybeard.artemis:artemis-odb:1.3.1"
         compile "org.apache.commons:commons-lang3:3.0"
         compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
         compile "com.google.guava:guava:19.0"
