--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ project(":core") {
         compile "net.onedaybeard.artemis:artemis-odb:1.3.1"
     	compile "net.mostlyoriginal.artemis-odb:contrib-core:1.1.0"
     	compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:1.1.0"
+    	compile "net.mostlyoriginal.artemis-odb:contrib-plugin-profiler:1.1.0"
         compile "org.apache.commons:commons-lang3:3.0"
         compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
         compile "com.google.guava:guava:19.0"
