--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-    	classpath "net.onedaybeard.artemis:artemis-odb-gradle-plugin:1.3.1"
+        classpath "net.onedaybeard.artemis:artemis-odb-gradle-plugin:1.3.1"
     }
 }
 
@@ -16,10 +16,16 @@ allprojects {
     ext {
         appName = 'wf'
         gdxVersion = '1.8.0'
-        roboVMVersion = '1.0.0-beta-03'
-        box2DLightsVersion = '1.3'
-        ashleyVersion = '1.3.1'
-        aiVersion = '1.5.0'
+        commonsLangVersion = '3.0'
+        jacksonVersion = '2.6.3'
+        logbackVersion = '1.1.3'
+        guavaVersion = '19.0'
+        
+        artemisVersion = '1.3.1'
+        artemisContribVersion = '1.1.0'
+        
+        mockitoVersion = '1.+'
+        junitVersion = '4.12'
     }
 
     repositories {
@@ -39,22 +45,21 @@ project(":desktop") {
     }
 }
 
-project(":utils") {
-    apply plugin: "java"
-
-    dependencies {
-        testCompile "org.mockito:mockito-core:1.+"
-        testCompile "junit:junit:4.11+"
-    }
-}
-
 project(":test") {
     apply plugin: "java"
 
     dependencies {
-        compile "org.mockito:mockito-core:1.+"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "junit:junit:4.11+"
+        compile "junit:junit:$junitVersion"
+        compile "org.mockito:mockito-core:$mockitoVersion"
+    }
+}
+
+project(":utils") {
+    apply plugin: "java"
+    
+    dependencies {
+        compile project(":test")
     }
 }
 
@@ -62,13 +67,11 @@ project(":save") {
     apply plugin: "java"
 
     dependencies {
-        compile "ch.qos.logback:logback-classic:1.1.3"
+        compile "ch.qos.logback:logback-classic:$logbackVersion"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "org.apache.commons:commons-lang3:3.0"
-        compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
+        compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+        compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         testCompile project(":test")
-        testCompile "org.mockito:mockito-core:1.+"
-        testCompile "junit:junit:4.11+"
     }
 }
 
@@ -78,13 +81,11 @@ project(":mechanics") {
     dependencies {
         compile project(":utils")
         compile project(":save")
-        compile "ch.qos.logback:logback-classic:1.1.3"
-        compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
-    	compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:1.1.0"
-        compile "com.google.guava:guava:19.0"
+        compile "ch.qos.logback:logback-classic:$logbackVersion"
+        compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:$artemisContribVersion"
+        compile "com.google.guava:guava:$guavaVersion"
         testCompile project(":test")
-        testCompile "org.mockito:mockito-core:1.+"
-        testCompile "junit:junit:4.11+"
     }
 }
 
@@ -95,17 +96,15 @@ project(":core") {
         compile project(":utils")
         compile project(":mechanics")
         compile project(":save")
-        compile "ch.qos.logback:logback-classic:1.1.3"
+        compile "ch.qos.logback:logback-classic:$logbackVersion"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "net.onedaybeard.artemis:artemis-odb:1.3.1"
-    	compile "net.mostlyoriginal.artemis-odb:contrib-core:1.1.0"
-    	compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:1.1.0"
-    	compile "net.mostlyoriginal.artemis-odb:contrib-plugin-profiler:1.1.0"
-        compile "org.apache.commons:commons-lang3:3.0"
-        compile "com.fasterxml.jackson.core:jackson-databind:2.6.3"
+        compile "net.onedaybeard.artemis:artemis-odb:$artemisVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-core:$artemisContribVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:$artemisContribVersion"
+        compile "net.mostlyoriginal.artemis-odb:contrib-plugin-profiler:$artemisContribVersion"
+        compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+        compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         testCompile project(":test")
-        testCompile "org.mockito:mockito-core:1.+"
-        testCompile "junit:junit:4.11+"
     }
 }
 
